--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ img {
 .introducao-bg {
 background: #000000;
 color: #ffffff;
+box-shadow: inset --120px #ffffff;
 }
 
 .introducao {
@@ -115,7 +116,13 @@ color: #ffffff;
 
 .introducao-conteudo {
   align-self: end;
- padding-bottom: 80px; 
+ padding-bottom: 200px; 
+}
+
+.introducao img {
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
 }
 
 .introducao h1 {
@@ -151,5 +158,44 @@ color: #ffffff;
 }
 
 .introducao a:hover {
-  background: linear-gradient(#ffbf00, #e59317);
+  background: linear-gradient(#ffbf00, #e59317
+  );
+}
+
+@media (max-width:600px) {
+  .introducao a {
+    padding: 12px 16px;
+    font-size: 16px;
+  }
+}
+
+@media(max-width: 1200px) {
+  .introducao h1 {
+    font-size: 48px;
+  }
+  .introducao {
+    font-size: 18px;
+  }
+}
+@media(max-width: 800px) {
+  .introducao-bg {
+    background: #111111;
+    padding-top: 40px;
+    box-shadow: inset -60px #ffffff;
+  }
+  .introducao {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+  .introducao-conteudo {
+    padding-bottom: 0px;
+  }
+  .introducao h1 {
+    font-size: 32px;
+    margin-bottom: 16px;
+  }
+  .introducao img {
+    height: 300px;
+    width: 100%;
+  }
 }
