--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-    background-color: #000000;
+    background-color: var(--cor-12);
   }
   
   .header {
@@ -24,10 +24,8 @@
   .header-menu a {
     display: inline-block;
     padding: 16px 0px;
-    font-size: 18px;
     position: relative;
-    font-family: 'POPPINS';
-    font-weight: 400;
+    color: var(--cor-0);
   }
   
   .header-menu a::after {
@@ -37,7 +35,7 @@
     width: 0%;
     margin-top: 4px;
     transition: 0.3s;
-    background: #ffffff;
+    background: var(--cor-0);
     position: absolute;
   }
   .header-menu a:hover:after{
@@ -49,12 +47,12 @@
       gap: 20px;
     }
     .header-menu a {
-      background: #111111;
+      background: var(--cor-11);
       padding: 12px 16px;
       border-radius: 4px;
     }
     .header-menu a:hover{
-      background-color: #2e2e2e;
+      background-color: var(--cor-10);
     }
     .header-menu a:after {
       display: none;
