--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,6 +1,6 @@
 .introducao-bg {
-    background: #000000;
-    box-shadow: inset --120px #ffffff;
+    background: var(--cor-12);
+    box-shadow: inset --120px var(--cor-0)
     }
     
     .introducao {
@@ -28,12 +28,8 @@
     
     .introducao h1 {
       margin-bottom: 32px;
-      
-    
     }
-    .introducao h1 span {
-      color: #ffbb00;
-    }
+
     
     .introducao p {
       margin-bottom: 20px;
@@ -53,7 +49,7 @@
     }
     @media(max-width: 800px) {
       .introducao-bg {
-        background: #111111;
+        background: var(--cor-11);
         padding-top: 40px;
         box-shadow: inset -60px #ffffff;
       }
