--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -1,14 +1,59 @@
-.texto-grande {
-      font-size: 64px;
-      line-height: 1.125;
-      font-family: 'POPPINS';
+.fonte-1-xs {
+      font: 400 0.75rem/1.35"Poppins", sans-serif;
+}
+
+.fonte-2-xs {
+      font: 400 0.875rem/1.43"Roboto", sans-serif;
+}
+
+.fonte-1-s {
+      font: 400 1rem/1.5 "Poppins", sans-serif;
+}
+
+.fonte-2-s {
+      font: 400 1rem/1.5 "Roboto", sans-serif;
+}
+
+.fonte-1-m,
+.fonte-1-mb  {
+      font: 400 1.25rem/1.35 "Poppins", sans-serif;
+}
+
+.fonte-2-m {
+     font: 500 1.125rem/1.35 "Roboto", sans-serif;
+}
+
+.fonte-1-l {
+      font: 400 1.5rem/1.5 "Poppins", sans-serif;
+ }
+
+ .fonte-2-l,
+ .fonte-2-lb {
+      font: 400 1.15rem/1.5 "Roboto", sans-serif;
+ }
+
+ .fonte-2-lb {
+      font-weight: 500;
+      letter-spacing: 0.015em;
+      text-transform: uppercase;
+ }
+
+ .fonte-1-xl  {
+      font: 600 2rem/1.25 "Poppins", sans-serif;
+}
+
+.fonte-2-xl  {
+      font: 500 2rem/1.25 "Poppins", sans-serif;
+}
+
+.fonte-1-mb  {
       font-weight: 600;
 }
 
-.texto-medio {
-      font-size: 24px;
-      line-height: 1.5;
-      font-family: 'ROBOTO';
-      font-weight: 500;
-      
+.texto-2-1 {
+      font: 600 1.55rem/1.5'Roboto', sans-serif;
+}
+
+.texto-1-xxl {
+      font: 600 4rem/1.125'Poppins', sans-serif;
 }
