--- a/css/global/global.css
+++ b/css/global/global.css
@@ -5,6 +5,9 @@ body{
   }
   
   h1,
+  h2,
+  h3,
+  h4,
   ul,
   p {
     margin: 0px;
@@ -24,3 +27,7 @@ body{
    max-width: 100%;
    display: block;
   }
+
+  img[src$=".jpg"] {
+   border-radius: 4px;
+ }
