--- a/css/global/header.css
+++ b/css/global/header.css
@@ -8,11 +8,11 @@
     gap: 20px;
     justify-content: space-between;
     align-items: center;
-    box-sizing: border-box;
-    padding: 20px;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 45px;
+    padding-right: 20px;
+    font-size: 20px;
   }
   
   .header-menu {
@@ -25,7 +25,6 @@
     display: inline-block;
     padding: 16px 0px;
     position: relative;
-    color: var(--cor-0);
   }
   
   .header-menu a::after {
