--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -57,3 +57,23 @@
 .texto-1-xxl {
       font: 600 4rem/1.125'Poppins', sans-serif;
 }
+
+@media(max-width: 1200px) {
+      .font-1-xxl {
+        font-size: 3rem;
+      }
+      .font-2-l, 
+      .font-2-l-b  {
+        font-size: 1.125rem;
+      }
+    }
+
+    @media (max-width: 800px){
+      .fonte-1-xxl {
+            font-size: 2rem;
+      }
+      .fonte-1-xl,
+      .fonte-2-xl {
+      font-size: 1.5rem;
+      }
+    }
