Adição de novas áreas do site.
Devidamente estilizadas e adicionadas as áreas de :
Mostruário de bicicletas
Tecnologia presente nos produtos
Seguros
Depoimentos

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 
 /*home*/
 @import './home/introducao.css';
+@import './home/tecnologia.css';
+@import './home/parceiros.css';
+@import './home/depoimento.css';
 
 
 /*utilidades*/
@@ -13,4 +16,7 @@
 
 /*bicicletas*/
 @import './bicicletas/bicicletas-lista.css';
+
+/*seguros*/
+@import './seguros/seguro.css';
 
