--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -28,12 +28,22 @@
     font-size: 18px;
     line-height: 1.33;
     font-weight: bolder;
-    font: 400 1.25rem/1.35 "roboto", sans-serif;
+    max-width: max-content;
+    
   }
   
   .botao:hover {
     background: linear-gradient(#ffbf00, #e59317
     );
+  }
+
+  .botao.secundario {
+    background: var(--cor-10);
+    color: var(--cor-2);
+  }
+
+  .botao.secundario:hover {
+    background: var(--cor-9);
   }
   
   @media (max-width:600px) {
@@ -41,4 +51,23 @@
       padding: 12px 16px;
       font-size: 1rem;
     }
+  }
+
+  .link {
+    display: inline-block;
+    color: var(--cor-p1);
+    font: 500 1.5rem/1.5 "Poppins", sans-serif;
+    text-transform: uppercase;
+  }
+
+  .link::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: currentColor;
+  }
+
+  .link:hover {
+    color: var(--cor-0);
   }
