--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -28,11 +28,11 @@
  }
 
  .fonte-2-l,
- .fonte-2-lb {
+ .fonte-2-l-b {
       font: 400 1.15rem/1.5 "Roboto", sans-serif;
  }
 
- .fonte-2-lb {
+ .fonte-2-l-b {
       font-weight: 500;
       letter-spacing: 0.015em;
       text-transform: uppercase;
@@ -45,8 +45,11 @@
 .fonte-2-xl  {
       font: 500 2rem/1.25 "Poppins", sans-serif;
 }
+.fonte-2-xl-2  {
+      font: 600/1.25 "Roboto", sans-serif;
+}
 
-.fonte-1-mb  {
+.fonte-1-m-b  {
       font-weight: 600;
 }
 
@@ -59,11 +62,11 @@
 }
 
 @media(max-width: 1200px) {
-      .font-1-xxl {
+      .fonte-1-xxl {
         font-size: 3rem;
       }
-      .font-2-l, 
-      .font-2-l-b  {
+      .fonte-2-l, 
+      .fonte-2-l-b  {
         font-size: 1.125rem;
       }
     }
