--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,31 @@
-@import './global/global.css';
-@import './utilidades/tipografia.css';
-@import './global/header.css';
-@import './utilidades/cores.css';
-
+@import "./global/global.css";
+@import "./utilidades/tipografia.css";
+@import "./global/header.css";
+@import "./global/footer.css";
+@import "./utilidades/cores.css";
 
 /*home*/
-@import './home/introducao.css';
-@import './home/tecnologia.css';
-@import './home/parceiros.css';
-@import './home/depoimento.css';
-
+@import "./home/introducao.css";
+@import "./home/tecnologia.css";
+@import "./home/parceiros.css";
+@import "./home/depoimento.css";
 
 /*utilidades*/
-@import './utilidades/componentes.css';
+@import "./utilidades/componentes.css";
 
 /*bicicletas*/
-@import './bicicletas/bicicletas-lista.css';
+@import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas.css";
+
+/*bicicleta*/
+@import "./bicicleta/seguro.css";
+@import "./bicicleta/bicicleta.css";
 
 /*seguros*/
-@import './seguros/seguro.css';
+@import "./seguros/seguro.css";
 
+@import "./seguros/perguntas.css";
+@import "./seguros/vantagens.css";
+
+/*termos*/
+@import "./termos/termos.css";
