--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,73 +1,115 @@
-.container-2{ 
+.container-2 {
   box-sizing: border-box;
   max-width: 1400px;
   padding-left: 55px;
   padding-right: 30px;
   font-size: 30px;
-  margin-left: auto ;
-  margin-right: auto ;
-  
-}
-
-.container-1{ 
-  box-sizing: border-box;
-  padding: 20px;
-  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
 
+.container-1 {
+  box-sizing: border-box;
+  padding: 20px;
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 55px;
+  padding-right: 30px;
+}
+
 .botao {
-    display: inline-block;
-    padding: 16px 32px;
-    background: linear-gradient(#ffbf00, #f2a50c);
-    border-radius: 4px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0,.1);
-    text-transform: uppercase;
-    color: var(--cor-p5);
-    font-size: 18px;
-    line-height: 1.33;
-    font-weight: bolder;
-    max-width: max-content;
-    
-  }
-  
-  .botao:hover {
-    background: linear-gradient(#ffbf00, #e59317
-    );
-  }
+  display: inline-block;
+  padding: 16px 32px;
+  background: linear-gradient(#ffbf00, #f2a50c);
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  color: var(--cor-p5);
+  font-size: 18px;
+  line-height: 1.33;
+  font-weight: bolder;
+  max-width: max-content;
+}
 
-  .botao.secundario {
-    background: var(--cor-10);
-    color: var(--cor-2);
-  }
+.botao:hover {
+  background: linear-gradient(#ffbf00, #e59317);
+}
 
-  .botao.secundario:hover {
-    background: var(--cor-9);
-  }
-  
-  @media (max-width:600px) {
-    .botao {
-      padding: 12px 16px;
-      font-size: 1rem;
-    }
-  }
+.botao.secundario {
+  background: var(--cor-10);
+  color: var(--cor-2);
+}
 
-  .link {
-    display: inline-block;
-    color: var(--cor-p1);
-    font: 500 1.5rem/1.5 "Poppins", sans-serif;
-    text-transform: uppercase;
-  }
+.botao.secundario:hover {
+  background: var(--cor-9);
+}
 
-  .link::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: currentColor;
-  }
+.botao.seta {
+  display: flex;
+  align-items: center;
+}
 
-  .link:hover {
-    color: var(--cor-0);
+.botao.seta::after {
+  content: "";
+  display: inline;
+  width: 18px;
+  height: 10px;
+  margin-left: 12px;
+  background: url("../../img/icones/seta.svg");
+  transition: transform 0.2s;
+}
+
+.botao.seta:hover::after {
+  transform: translatex(4px);
+}
+
+@media (max-width: 600px) {
+  .botao {
+    padding: 12px 16px;
+    font-size: 1rem;
   }
+}
+
+.link {
+  display: inline-block;
+  color: var(--cor-p1);
+  font: 500 1.5rem/1.5 "Poppins", sans-serif;
+  text-transform: uppercase;
+}
+
+.link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;
+}
+
+.link:hover {
+  color: var(--cor-0);
+}
+
+/* Títulos internos */
+
+.titulo-bg {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--cor-11);
+}
+
+.titulo p {
+  margin-bottom: 4px;
+}
+
+@media (max-width: 800px) {
+  .titulo-bg {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .titulo p {
+    font-size: 1rem;
+    text-transform: lowercase;
+    font-weight: 400;
+  }
+}
