--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@
 
 /*utilidades*/
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
+
 
 /*bicicletas*/
 @import "./bicicletas/bicicletas-lista.css";
@@ -29,3 +31,7 @@
 
 /*termos*/
 @import "./termos/termos.css";
+
+/*contato*/
+@import "./contato/contato.css";
+@import "./contato/loja.css";
