finalização da área de contatos + inicio da área de orçamentos
finalização da área de contatos com seus estilos definidos e inicio da área de orçamentos de seguros + bicicletas

--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,6 @@
 /*contato*/
 @import "./contato/contato.css";
 @import "./contato/loja.css";
+
+/*orçamento*/
+@import "./orçamento/orçamento.css"
