--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -15,13 +15,13 @@ background: linear-gradient(var(--cor-11)600px, var(--cor-1)0px);
 }
 
 .contato-dados {
-    background: var(--cor-12);
+     background: var(--cor-0) url('../../img/dec/bottom-right.svg') no repeat bottom 20px left 20px;
     border-radius: 5px 0 0 5px ;
 }
 
 .contato-formulario {
-    background: var(--cor-0);
     border-radius: 0 5px 5px 0;
+    background: var(--cor-0) url('../../img/dec/bottom-right.svg') no repeat bottom 20px right 20px;
 }
 
 .contato-dados h2  {
