--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -13,7 +13,8 @@
 
 .depoimento-conteudo {
   padding: 40px 40px 80px 80px;
-  align-self: flex-end;
+  align-self:end;
+  background: url("../../img/dec/bottom-right-p.svg") no repeat bottom 40px right 40px;
 }
 
 .depoimento-conteudo p {
